# c_speech_features

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  c_speech_features.c  c_speech_features.h  c_speech_features_config.h.in  setup.cfg  setup.py
bindings/python/: c_speech_features.i  helper.c  helper.h  setup.cfg  setup.py  test.py
python/: __init__.py  base.c  base.h  base.i  c_speech_features.i  helper.h  sigproc.c  sigproc.h  sigproc.i
python/test/: test.py
